#
# SPDX-FileCopyrightText: NVIDIA CORPORATION & AFFILIATES
# Copyright (c) 2020-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause
#
# See file LICENSE for terms.
#

EXTRA_DIST = \
	src/main/java \
	src/test \
	checkstyle.xml \
	pom.xml.in \
	README.md
	
SUBDIRS = \
	src/main/native
	
clean-local:
	-rm -rf resources
